feat: 支持条件更新/删除中的嵌套路径表达式
- JDBC 实现通过子查询处理关联实体属性条件
  - 例如: where(Employee::getDepartment).get(Department::getName).eq("Engineering")
  - 生成: department_id IN (SELECT id FROM department WHERE name = ?)
- JPA 实现支持嵌套路径生成完整 JPQL 路径表达式
- 添加集成测试覆盖 UPDATE/DELETE 场景

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>