@@ -36,9 +36,9 @@ abstract class JpaWhereStepSupport<T> {
                                         ExpressionNode node, int paramIndex) {
         if (node instanceof PathNode pathNode) {
             jpql.append("e.").append(getAttributeName(pathNode));
-        } else if (node instanceof LiteralNode literalNode) {
+        } else if (node instanceof LiteralNode(Object value)) {
             jpql.append("?").append(paramIndex);
-            params.add(literalNode.value());
+            params.add(value);
             return paramIndex + 1;
         } else if (node instanceof OperatorNode operatorNode) {
             return appendOperatorNode(jpql, params, operatorNode, paramIndex);
@@ -54,7 +54,7 @@ abstract class JpaWhereStepSupport<T> {
         switch (operator) {
             case AND, OR -> {
                 jpql.append("(");
-                paramIndex = appendWhereCondition(jpql, params, operands.get(0), paramIndex);
+                paramIndex = appendWhereCondition(jpql, params, operands.getFirst(), paramIndex);
                 for (int i = 1; i < operands.size(); i++) {
                     jpql.append(" ").append(operator.sign()).append(" ");
                     paramIndex = appendWhereCondition(jpql, params, operands.get(i), paramIndex);
@@ -63,7 +63,7 @@ abstract class JpaWhereStepSupport<T> {
             }
             case NOT -> {
                 jpql.append("NOT ");
-                paramIndex = appendWhereCondition(jpql, params, operands.get(0), paramIndex);
+                paramIndex = appendWhereCondition(jpql, params, operands.getFirst(), paramIndex);
             }
             case EQ, NE, GT, GE, LT, LE, LIKE -> {
                 paramIndex = appendWhereCondition(jpql, params, operands.get(0), paramIndex);
@@ -71,7 +71,7 @@ abstract class JpaWhereStepSupport<T> {
                 paramIndex = appendWhereCondition(jpql, params, operands.get(1), paramIndex);
             }
             case IN -> {
-                paramIndex = appendWhereCondition(jpql, params, operands.get(0), paramIndex);
+                paramIndex = appendWhereCondition(jpql, params, operands.getFirst(), paramIndex);
                 jpql.append(" IN (");
                 for (int i = 1; i < operands.size(); i++) {
                     if (i > 1) jpql.append(", ");
@@ -80,11 +80,11 @@ abstract class JpaWhereStepSupport<T> {
                 jpql.append(")");
             }
             case IS_NULL -> {
-                paramIndex = appendWhereCondition(jpql, params, operands.get(0), paramIndex);
+                paramIndex = appendWhereCondition(jpql, params, operands.getFirst(), paramIndex);
                 jpql.append(" IS NULL");
             }
             case IS_NOT_NULL -> {
-                paramIndex = appendWhereCondition(jpql, params, operands.get(0), paramIndex);
+                paramIndex = appendWhereCondition(jpql, params, operands.getFirst(), paramIndex);
                 jpql.append(" IS NOT NULL");
             }
             case BETWEEN -> {
@@ -100,8 +100,14 @@ abstract class JpaWhereStepSupport<T> {
     }
 
     protected String getAttributeName(PathNode pathNode) {
-        EntityType entity = metamodel.getEntity(entityClass);
-        EntityAttribute attribute = (EntityAttribute) entity.getAttribute(pathNode);
-        return attribute.name();
+        // 对于嵌套路径，生成完整的路径表达式（如 department.name）
+        StringBuilder sb = new StringBuilder();
+        for (int i = 0; i < pathNode.size(); i++) {
+            if (i > 0) {
+                sb.append(".");
+            }
+            sb.append(pathNode.get(i));
+        }
+        return sb.toString();
     }
 }
